# irc-sitz-rs

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Config.toml.example  Dockerfile  LICENSE  README.md  default.nix  docker-compose.yml  renovate.json
.github/workflows/: ci.yml
src/: buffer.rs  buffer_tests.rs  bus.rs  config.rs  constants.rs  discord.rs  event.rs  event_tests.rs  events.rs  irc.rs  lib.rs  main.rs  message.rs  mixer.rs  net.rs  playback.rs  playback_tests.rs  sine.rs  songbook.rs  songbook_tests.rs  songleader.rs  songleader_tests.rs  stdin.rs  symphonia.rs  youtube.rs
src/sources/: espeak.rs  mod.rs  sine.rs  symphonia.rs
tests/: audio_pipeline.rs  error_handling.rs  irc_commands.rs  music_queue.rs  sitz_flow.rs  state_machine.rs  state_persistence.rs
tests/common/: mod.rs
