[package]
name = "irc-sitz-rs"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "=1.0.98"
byteorder = "=1.5.0"
bytes = "=1.10.1"
espeakng-sys = { version = "=0.3.0", features = ["clang-runtime"] }
futures = "=0.3.31"
hound = "=3.5.1"
irc = { version = "=1.0.0", default-features = false, features = [
	"serde",
	"serde_derive",
	"tokio-rustls",
	"toml",
	"toml_config",
] }
itertools = "=0.14.0"
lazy_static = "=1.5.0"
log = "=0.4.27"
pretty_env_logger = "=0.5.0"
rand = "=0.8.5"
regex = "=1.11.1"
reqwest = { version = "=0.12.20", default-features = false, features = [
	"rustls-tls",
] }
scraper = "=0.23.1"
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"
serde_regex = "=1.1.0"
symphonia = { version = "=0.5.4", features = ["all-formats", "all-codecs"] }
tokio = { version = "=1.45.1", features = ["full"] }
tokio-util = { version = "=0.7.15", features = ["io", "io-util"] }
toml = "=0.8.23"
youtube_dl = { version = "=0.10.0", features = [
	"downloader-rustls-tls",
	"tokio",
] }
