[package]
name = "irc-sitz-rs"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
discord = ["serenity", "poise"]

[dependencies]
anyhow = "1.0"
byteorder = "1.5"
bytes = "1.11"
espeakng-sys = { version = "0.3", features = ["clang-runtime"] }
futures = "0.3"
hound = "3.5"
irc = { version = "1.1", default-features = false, features = [
	"serde",
	"tls-rust",
	"toml",
	"toml_config",
] }
itertools = "0.14"
lazy_static = "1.5"
log = "0.4"
pretty_env_logger = "0.5"
rand = "0.9"
regex = "1.12"
reqwest = { version = "0.13", default-features = false, features = [
	"rustls",
] }
scraper = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_regex = "1.1"
symphonia = { version = "0.5", features = ["all-formats", "all-codecs"] }
tokio = { version = "1.49", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "io-util"] }
toml = "0.9"
youtube_dl = { version = "0.10", features = [
	"downloader-rustls-tls",
	"tokio",
] }

# Discord support (optional)
serenity = { version = "0.12", default-features = false, features = [
	"client",
	"gateway",
	"model",
	"rustls_backend",
	"cache",
], optional = true }
poise = { version = "0.6", optional = true }
